dataset1235/2025-2/610742602/users/3823950083/executions/677928262_1462915504.log
== SUBMISSION (2025-08-24 03:39:38)
-- CODE: 
import math
# faça seu código aqui!
pentagon_side = float(input("Informe o valor do lado do pentagono: "))

apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
pentagon_area = (5/2) * pentagon_side * apotema

print(round(pentagon_area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Informe o valor do lado do pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Informe o valor do lado do pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Informe o valor do lado do pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Informe o valor do lado do pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Informe o valor do lado do pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Informe o valor do lado do pentagono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 03:39:18)
-- CODE: 
from math import *
# faça seu código aqui!
pentagon_side = float(input("Informe o valor do lado do pentagono: "))

apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
pentagon_area = (5/2) * pentagon_side * apotema

print(round(pentagon_area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 03:39:20)
-- CODE: 
from math import *
# faça seu código aqui!
pentagon_side = float(input("Informe o valor do lado do pentagono: "))

apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
pentagon_area = (5/2) * pentagon_side * apotema

print(round(pentagon_area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
                                    ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 03:39:29)
-- CODE: 
from math import
# faça seu código aqui!
pentagon_side = float(input("Informe o valor do lado do pentagono: "))

apotema = pentagon_side / (2 * (math.tan(math.pi/5)))
pentagon_area = (5/2) * pentagon_side * apotema

print(round(pentagon_area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    from math import
                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
